styles/fields/droparea.css
.dropzone {
  border: 1px dashed var(--stroke-default);
  border-radius: .25rem;

  display: grid;
  justify-items: center;
  gap: .5rem;

  text-align: center;
  padding: 1.75rem 1rem;

  position: relative;

  & input {
    position: absolute;
    width: 100%;
    height: 100%;
    inset: 0;
    opacity: 0;
  }

  & p {
    color: #A8A29E;
  }

  &:hover, &:has(input:focus) {
    border-width: 2px;
    border-color: var(--stroke-highlight);
    background-color: var(--surface-secondary);
    
    & p {
      color: var(--text-tertiary);
    }

    & svg path {
      stroke: var(--stroke-highlight);
    }
  }
}

